# sgtl5000-rs

./: Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
examples/: teensy_passthrough.rs
src/: lib.rs  registers.rs
tests/: lib.rs
